[package]
name = "typdown-typst"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
typst = "0.14.2"
typst-kit = "0.14.2"
typst-svg = "0.14.2"

[profile.release]
opt-level = 2
codegen-units = 1
lto = true
strip = true

[features]
default = ["embed-fonts"]

embed-fonts = ["typst-kit/embed-fonts"]
